# trs-project

./: .env.example  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/api/: __init__.py  archive.py  base_client.py  utils.py
src/api/ai/: client.py  schemas.py
src/api/transcription/: client.py
src/stream_processing/: service.py
src/tg_bot/: __init__.py  bot.py
